web/_includes/style.css
/* ... */
section,
footer {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-gap: 3em 1em;
  margin: 3em 0 0;
}

article .eventinfo {
  max-width: 80ch;
}

@media all and (max-width: 650px) {
  section {
    margin: 3em 1em 0;
  }
}

/* Add this class to an element to make it fill the width of the screen 
and sit horizontally central like this tutorial - https://codepen.io/andybelldesign/pen/vYOJjNw?editors=1100 */
.full-bleed {
  width: 100vw;
  margin-left: calc(50% - 50vw);
}

p.more-link {
  /* text-align:center; */
  grid-row: 2;
  grid-column: 1 / 13;
  display: flex;
  justify-content: center;
}

footer {
  background-color: var(--rho-cancer-1);
}

footer .footer-content {
  grid-column: 3 / 11;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  padding: 2em 0;
}

footer .footer-content div ol.social-icons {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
}

footer .footer-content div ol.social-icons li {
  margin-right: .8em;
  align-self: center;
}

footer .footer-content div ol.social-icons li a svg.social-icon {
  fill: var(--rho-cancer-3);
  height: 24px;
}

footer .footer-content div ol.social-icons li a svg.social-icon:hover {
  opacity: 0.8;
}

footer .footer-content nav.primary-nav ul.primary-nav__list {
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding-left: 0;
  margin-top: -0.2em;
}

footer .footer-content nav.primary-nav ul.primary-nav__list li {
  padding: 0 0 .8em 0;
}

@media all and (max-width: 800px) {
  footer .footer-content {
    grid-column: 2 / 12;
  }
  footer .footer-content .footer-column .footer-newsletterform {
    margin-bottom: 1.8em;
  }
}

@media all and (max-width: 650px) {
  footer .footer-content {
    grid-column: 1 / 13;
    padding: 2em 1em;
    flex-flow: column-reverse nowrap;
  }
  footer .footer-content nav.primary-nav {
    order: 3;
  }
  .primary-nav__list .primary-nav__item a {
    padding-left: 0;
  }
}





/* ==========================================================================
   #NEWSLETTER SIGNUP FORM
   ========================================================================== */

div.mc-field-group label {
  margin-bottom: 1.4em;
}

div.mc-field-email {
  margin-top: .8em;
}

div.mc-field-email input.email-field,
div.mc-field-email input.button {
  padding: .6em;
  border: 2px solid var(--rho-cancer-3);
  font-size: inherit;
  /* font-family: var(--body-font); */
}

div.mc-field-email input.email-field {
  border-top-left-radius: var(--global-br);
  border-bottom-left-radius: var(--global-br);
}

div.mc-field-email input.button {
  border-top-right-radius: var(--global-br);
  border-bottom-right-radius: var(--global-br);
  background-color: transparent;
  color: var(--rho-cancer-3);
  cursor: pointer;
}

div.mc-field-email input.button:hover {
  background-color: var(--rho-cancer-2);
}





/* ==========================================================================
   #BUTTONS
   ========================================================================== */

a.btn,
a.btn:active {
  cursor: pointer;
  /* line-height: 1.6; */
  line-height: 1;
  font-weight: bold;
  text-decoration: none;
  margin: 1.6rem .4rem 1.6rem 0;
  padding: .6em 1.2em;
  font-size: calc(12px + 0.25vw);
  font-family: var(--headings-font);
  font-weight: 542;
  font-stretch: 85;
  white-space: nowrap;
  display: inline-flex;
  align-items: center;
  justify-content: space-between;
}

a.btn:hover {
  opacity: 0.8;
  background-color: var(--beta-night);
}

a.btn--primary {
  background-color: none;
  border-color: var(--general-night-3);
  border: 2px solid var(--general-night-1);
  border-radius: var(--global-br);
  color: var(--general-night-3);
}

a.btn--secondary {
  background-color: var(--general-night-1);
  border-radius: var(--global-br);
  color: var(--general-night-4);
}

/* a.btn--secondary svg, */
a.btn svg {
  margin-inline-start: 0.6em;
  /* margin: 0 0 0 .6em; */
  height: 1.4em;
  stroke: currentColor;
  transform: translateY(-1px); /* Optical adjustment */
}

a.btn--secondary:hover {
  background-color: var(--general-night-2);
}

/* Style variants
   ========================================================================== */

a.btn--hero {
  border: 2px solid var(--manu-blood-1);  
  border-radius: var(--global-br);
  color: var(--manu-blood-1);
}

a.btn--featured-book {
  color: var(--manu-moon-3);
  border: 2px solid var(--manu-moon-3);
  border-radius: var(--global-br);
  margin: 0 .6em .4em 0;
}
a.btn--text-only {
  border: 2px solid transparent;
  padding: .6em 0;
}




/* ==========================================================================
   #HERO
   ========================================================================== */

section.hero {
  background-color: var(--rho-cancer-3);
  min-height: 30em;
  margin: 0;
}

.hero-background {
  grid-column: 1 / 13;
  grid-row: 1;
  /* background-image: url(../images/lobizona-star-field.jpg);  */
  background-size: cover;
}

/* animation effects for hero bkg */
.hero-background {
  background:
    linear-gradient(
      rgba(251, 195, 167, 0.45), 
      rgba(233, 145, 152, 0.45),
      rgba(163, 80, 72, 0.45)
    ),
    url(../images/lobizona-hero.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;
}

.hero-background img {
  object-fit: cover;
}

.hero-card {
  grid-column: 5 / 12;
  grid-row: 1;
  color: white;
  background-color: var(--alpha-night);
  border-radius: var(--global-br);
  /* I'm going to try adjusting this card shape with vertical width (vw) properties later on */
  padding: 4rem;
  margin: auto;
  z-index: 3;
}
/* ... */

